# riptide-optics

./: .clang-format  CMakeLists.txt  README.md  action.cpp  action.hpp  config.cpp  config.hpp  config.json  construction.cpp  construction.hpp  detector.cpp  detector.hpp  event.cpp  event.hpp  generator.cpp  generator.hpp  main.cpp  physics.cpp  physics.hpp  run.cpp  run.hpp  vis.mac
